--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function pay(){
 	try{
 		payment.show().then(function(response) {
 		  // Process response
-		  
+		  alert(JSON.stringify(response.toJSON()));
 		  response.complete("success");
 		}).catch(function(err) {
 		  alert("Error to complete"+err);
