--- a/pymnts.html
+++ b/pymnts.html
@@ -10,7 +10,7 @@ function onBuyClicked() {
 
   // Supported payment methods
   var supportedInstruments = [{
-      supportedMethods: ['basic-card']
+      supportedMethods: ['basic-card'],
       data: {
         supportedNetworks: [
           'visa', 'mastercard', 'amex', 'discover',
