--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div class="login-page">
       <div class="form">
           <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
-          <button id="console" >Unrecognized User (Login with Username/Password)</button>
+          <button id="console">Unrecognized User (Login with Username/Password)</button>
           <p class="message">Not registered? <a href="register.html">Create an account</a></p>
+          <input type="password" id="hiddenAuthData" value="" style="display: none;"/>
         </div>
       </div>
     </div>
