--- a/register.html
+++ b/register.html
@@ -19,6 +19,7 @@
           <input id="username" type="text" placeholder="Username"/>
           <button id="class-a">Register</button>
           <p class="message">Already registered? <a href="index.html">Click here to Login</a></p>
+          <button id="class-b">Reset Application</button>
         </div>
       </div>
     </div>
